--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.format_sql=true
+
+application.jwt.secretKey=secret
+application.jwt.tokenPrefix=Bearer 
+application.jwt.tokenExpirationAfterDays=10
